--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -179,7 +179,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId> 
             <artifactId>commons-dbcp2</artifactId>
-            <version>${dbcp.version}</version>
+            <version>${commons.dbcp2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.openjpa</groupId>
