--- a/examples/spring2Webapp/pom.xml
+++ b/examples/spring2Webapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.4.6-SNAPSHOT</version>
+        <version>1.4.6</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>spring2Webapp</artifactId>
