--- a/pom.xml
+++ b/pom.xml
@@ -134,17 +134,17 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
-        <repository>
+        <!--repository>
             <id>apache.staging</id>
             <url>https://repository.apache.org/content/groups/staging/</url>
-            <name>Apache Snapshot Repo</name>
+            <name>Apache Staging Repo</name>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository>
+        </repository-->
         <repository>
             <id>wasdev-maven-repo</id>
             <name>wasdev-maven-repo</name>
