--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -353,6 +353,13 @@
                 <idp.http.port>9080</idp.http.port>
                 <realm>realm-a</realm>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                    <version>${hsqldb.version}</version>
+                </dependency>
+            </dependencies>
             <build>
                 <filters>
                     <filter>src/main/filters/realm-a/env.properties</filter>
