add hsqldb dependencies for all profiles

--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -274,6 +274,13 @@
                 <jpa.url>jdbc:hsqldb:target/db/realma/myDB;shutdown=true</jpa.url>
                 <realm>realm-a</realm>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                    <version>${hsqldb.version}</version>
+                </dependency>
+            </dependencies>
             <build>
                 <filters>
                     <filter>src/main/filters/realm-a/env.properties</filter>
@@ -321,6 +328,13 @@
                 <idp.https.port>12346</idp.https.port>
                 <realm>realm-b</realm>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                    <version>${hsqldb.version}</version>
+                </dependency>
+            </dependencies>
             <build>
                 <filters>
                     <filter>src/main/filters/realm-b/env.properties</filter>
@@ -347,6 +361,13 @@
             <properties>
                 <maven.test.skip>true</maven.test.skip>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                    <version>${hsqldb.version}</version>
+                </dependency>
+            </dependencies>
             <build>
                 <defaultGoal>jetty:run-war</defaultGoal>
             </build>
