--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     </prerequisites>
 
     <properties>
-        <apacheds.version>2.0.0-M24</apacheds.version>
+        <apacheds.version>2.0.0.AM26</apacheds.version>
         <bval.version>2.0.3</bval.version>
         <commons.dbcp2.version>2.7.0</commons.dbcp2.version>
         <commons.logging.version>1.2</commons.logging.version>
