fediz-oidc: include key id

--- a/services/oidc/src/main/resources/rs.security.properties
+++ b/services/oidc/src/main/resources/rs.security.properties
@@ -22,3 +22,4 @@ rs.security.keystore.file=oidc.jks
 #rs.security.encryption.content.algorithm=A128GCM
 #rs.security.encryption.key.algorithm=RSA-OAEP
 rs.security.signature.algorithm=RS256
+rs.security.signature.include.key.id=true
