--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -187,6 +187,12 @@
             <artifactId>commons-validator</artifactId>
             <version>${commons.validator.version}</version>
         </dependency>
+        <!-- This can be removed if commons validator 1.7 is ever released -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
