--- a/examples/jaxrsCxfPluginWebapp/pom.xml
+++ b/examples/jaxrsCxfPluginWebapp/pom.xml
@@ -50,8 +50,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
