--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -217,6 +217,30 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.apache.syncope.core</groupId>
+                                    <artifactId>syncope-core-persistence-jpa</artifactId>
+                                    <version>2.1.6</version>
+                                    <destFileName>fediz-oidc.war</destFileName>
+                                    <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                                    <includes>org/springframework/orm/jpa/vendor/*.class</includes> 
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                    <execution>
