--- a/systests/federation/samlWebapp/pom.xml
+++ b/systests/federation/samlWebapp/pom.xml
@@ -40,16 +40,20 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-           <groupId>org.apache.cxf</groupId>
-           <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-           <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>org.apache.cxf</groupId>
-           <artifactId>cxf-rt-rs-security-sso-saml</artifactId>
-           <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-security-sso-saml</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
@@ -58,7 +62,6 @@
             <artifactId>slf4j-jdk14</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
     </dependencies>
     <build>
         <!-- Name of the generated WAR file -->
