--- a/systests/webapps/cxfWebapp/pom.xml
+++ b/systests/webapps/cxfWebapp/pom.xml
@@ -48,8 +48,12 @@
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
