Migrate to Spring Security 5

--- a/services/idp/src/main/resources/users.properties
+++ b/services/idp/src/main/resources/users.properties
@@ -1,2 +1,2 @@
-user=password,ROLE_USER,enabled
-admin=password,ROLE_USER,ROLE_ADMIN,enabled
+user={noop}password,ROLE_USER,enabled
+admin={noop}password,ROLE_USER,ROLE_ADMIN,enabled
