Updating Jetty to 9.4.32 + fixing tests

--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -92,7 +92,16 @@
                 <includes>
                     <include>**/*</include>
                 </includes>
+                <excludes>
+                    <exclude>**/*.jks</exclude>
+                </excludes>
                 <filtering>true</filtering>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <includes>
+                    <include>**/*.jks</include>
+                </includes>
             </testResource>
         </testResources>
         <plugins>
