--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
         <artifactId>webservice</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.wsclientWebapp.webservice</groupId>
     <artifactId>fedizservice</artifactId>
