--- a/systests/webapps/pom.xml
+++ b/systests/webapps/pom.xml
@@ -23,7 +23,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz-systests</artifactId>
-       <version>1.5.1</version>
+       <version>1.5.2-SNAPSHOT</version>
    </parent>
    <groupId>org.apache.cxf.fediz.systests</groupId>
    <artifactId>fediz-systests-webapps</artifactId>
