fix maven-assembly-plugin goal after version update

--- a/plugins/jetty9/pom.xml
+++ b/plugins/jetty9/pom.xml
@@ -74,7 +74,7 @@
                         <id>zip-file</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>attached</goal>
+                            <goal>single</goal>
                         </goals>
                         <configuration>
                             <descriptors>
