--- a/plugins/tomcat/pom.xml
+++ b/plugins/tomcat/pom.xml
@@ -62,7 +62,7 @@
                         <id>zip-file</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>attached</goal>
+                            <goal>single</goal>
                         </goals>
                         <configuration>
                             <descriptors>
