additional assembly for jdk9+

--- a/pom.xml
+++ b/pom.xml
@@ -733,6 +733,13 @@
                                 <fork>true</fork>
                             </configuration>
                         </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-assembly-plugin</artifactId>
+                            <configuration>
+                                <finalName>${project.artifactId}-${project.version}-java11</finalName>
+                            </configuration>
+                        </plugin>
                     </plugins>
                 </pluginManagement>
             </build>
