Trying to debug CXF test failure

--- a/systests/cxf/src/test/resources/logging.properties
+++ b/systests/cxf/src/test/resources/logging.properties
@@ -34,7 +34,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the WARNING and above levels.
-#handlers= java.util.logging.ConsoleHandler
+handlers= java.util.logging.ConsoleHandler
 #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 # Default global logging level.
@@ -43,7 +43,7 @@
 # can be overridden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= INFO
+.level= FINE
 
 ############################################################
 # Handler specific properties.
