Revert "update apache parent to 26; use plugin versions from here"
This reverts commit c84b710fbb1507ade0369c98421755a6cc5238ae.

--- a/plugins/cxf/pom.xml
+++ b/plugins/cxf/pom.xml
@@ -83,6 +83,11 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/assembly.xml</descriptor>
+                            </descriptors>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
