[maven-release-plugin] prepare release fediz-1.6.1

--- a/examples/jaxrsCxfPluginWebapp/pom.xml
+++ b/examples/jaxrsCxfPluginWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>jaxrsCxfPluginWebapp</artifactId>
@@ -79,4 +79,8 @@
         <!-- Name of the generated WAR file -->
         <finalName>fedizhelloworld</finalName>
     </build>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
