--- a/examples/simpleWebapp/pom.xml
+++ b/examples/simpleWebapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
     </parent>
 
     <groupId>org.apache.cxf.fediz.examples</groupId>
@@ -73,4 +73,8 @@
         <finalName>fedizhelloworld</finalName>
     </build>
 
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
