--- a/examples/wsclientWebapp/pom.xml
+++ b/examples/wsclientWebapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>wsclientWebapp</artifactId>
@@ -35,4 +35,8 @@
         <module>webapp</module>
     </modules>
 
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
