--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
         <artifactId>webservice</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.wsclientWebapp.webservice</groupId>
     <artifactId>common</artifactId>
@@ -74,4 +74,8 @@
             </releases>
         </pluginRepository>
     </pluginRepositories>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
