--- a/examples/wsclientWebapp/webservice/pom.xml
+++ b/examples/wsclientWebapp/webservice/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples</groupId>
         <artifactId>wsclientWebapp</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
     <artifactId>webservice</artifactId>
@@ -38,4 +38,8 @@
         <module>common</module>
         <module>service</module>
     </modules>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
