--- a/plugins/tomcat/pom.xml
+++ b/plugins/tomcat/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-tomcat</artifactId>
@@ -74,4 +74,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
