--- a/systests/federation/samlIdpWebapp/pom.xml
+++ b/systests/federation/samlIdpWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-federation</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.federation</groupId>
@@ -67,4 +67,8 @@
         <!-- Name of the generated WAR file -->
         <finalName>samlssoidp</finalName>
     </build>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
