--- a/systests/idp/pom.xml
+++ b/systests/idp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>fediz-systests</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
@@ -219,4 +219,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
