--- a/systests/webapps/pom.xml
+++ b/systests/webapps/pom.xml
@@ -23,7 +23,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz-systests</artifactId>
-       <version>1.6.1-SNAPSHOT</version>
+       <version>1.6.1</version>
    </parent>
    <groupId>org.apache.cxf.fediz.systests</groupId>
    <artifactId>fediz-systests-webapps</artifactId>
@@ -37,4 +37,8 @@
       <module>cxfWebapp</module>
    </modules>
 
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
