--- a/systests/webapps/springPreauthWebapp/pom.xml
+++ b/systests/webapps/springPreauthWebapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-webapps</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
@@ -88,4 +88,8 @@
         <finalName>fedizhelloworld</finalName>
     </build>
 
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
