--- a/systests/webapps/springWebapp/pom.xml
+++ b/systests/webapps/springWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-webapps</artifactId>
-        <version>1.6.1-SNAPSHOT</version>
+        <version>1.6.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
@@ -70,4 +70,8 @@
         <finalName>fedizhelloworld</finalName>
     </build>
 
+
+  <scm>
+    <tag>fediz-1.6.1</tag>
+  </scm>
 </project>
