--- a/examples/wsclientWebapp/pom.xml
+++ b/examples/wsclientWebapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>wsclientWebapp</artifactId>
@@ -34,9 +34,4 @@
         <module>webservice</module>
         <module>webapp</module>
     </modules>
-
-
-  <scm>
-    <tag>fediz-1.6.1</tag>
-  </scm>
 </project>
