--- a/examples/wsclientWebapp/webservice/service/pom.xml
+++ b/examples/wsclientWebapp/webservice/service/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
         <artifactId>webservice</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.wsclientWebapp.webservice</groupId>
     <artifactId>fedizservice</artifactId>
@@ -101,8 +101,4 @@
             <artifactId>spring-web</artifactId>
         </dependency>
     </dependencies>
-
-  <scm>
-    <tag>fediz-1.6.1</tag>
-  </scm>
 </project>
