--- a/plugins/spring/pom.xml
+++ b/plugins/spring/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-spring</artifactId>
@@ -118,8 +118,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>fediz-1.6.1</tag>
-  </scm>
 </project>
