--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>fediz-systests</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
@@ -38,9 +38,4 @@
         <module>samlsso</module>
         <module>unknown-subject</module>
     </modules>
-
-
-  <scm>
-    <tag>fediz-1.6.1</tag>
-  </scm>
 </project>
