--- a/systests/webapps/springWebapp/pom.xml
+++ b/systests/webapps/springWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-webapps</artifactId>
-        <version>1.6.1</version>
+        <version>1.6.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
@@ -69,9 +69,4 @@
         <!-- Name of the generated WAR file -->
         <finalName>fedizhelloworld</finalName>
     </build>
-
-
-  <scm>
-    <tag>fediz-1.6.1</tag>
-  </scm>
 </project>
