Migrating to Junit5

--- a/plugins/spring/pom.xml
+++ b/plugins/spring/pom.xml
@@ -43,8 +43,8 @@
             <version>${spring.security.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
