Removing test resources from checkstyle

--- a/pom.xml
+++ b/pom.xml
@@ -448,6 +448,7 @@
                     <configuration>
                         <includeResources>false</includeResources>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                        <includeTestResources>false</includeTestResources>
                     </configuration>
                     <executions>
                         <execution>
