Disabling errorprone for JDK17

--- a/pom.xml
+++ b/pom.xml
@@ -349,7 +349,7 @@
                     <configuration>
                         <compilerArgs>
                             <arg>-XDcompilePolicy=simple</arg>
-                            <arg>-Xplugin:ErrorProne</arg>
+                            <!-- <arg>-Xplugin:ErrorProne</arg>-->
                         </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
